Fixed spacing issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,6 +28,10 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+header {
+  height: 20%;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -48,4 +52,8 @@ main {
 
   height: 56px !important;
   font-size: 14px !important;
+}
+
+.your-yield {
+  width: 100%;
 }
